--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,11 @@ ol {
     list-style: none;
 }
 
+/* overrode the method in the imported stylesheet */
+ul {
+    padding-inline-start: 0px;
+}
+
 img {
     display: block;
     max-width: 100%;
@@ -156,7 +161,9 @@ header {
 }
 
 .logo {
-    max-width: 150px;
+    max-width: 100px;
+	display: flex;
+	vertical-align: middle;
     z-index: 2;
 }
 
@@ -166,6 +173,7 @@ nav {
     justify-content: space-between;
     -webkit-box-align: center;
     position: relative;
+	transform: translateX(0%);
 }
 
 .nav ol {
@@ -179,6 +187,58 @@ a.nav__link {
 .nav__resume {
     padding: 0.85rem .5rem;
     margin: 0;
+}
+
+/* Hamburger toggle button for small screen size */
+.nav-toggle {
+    padding: .5em;
+    border: 0;
+    cursor: pointer;
+    background: transparent;
+}
+
+.hamburger {
+    display: block;
+    position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.hamburger::before { top: 6px; }
+.hamburger::after { bottom: 6px; }
+
+@media screen and (max-width:843px) {
+    /*  Display hamburger button   */
+   .nav-toggle {
+       display: inline-block;
+   }
+    /*  Hide nav links   */
+    .nav {
+        display: none;
+    }
+
+}
+@media screen and (min-width:843px) {
+    /* Display navigation links */
+    .nav-toggle {
+        display: none;
+    }
 }
 
 .nav__resume,
@@ -206,16 +266,18 @@ a.nav__link {
     color: var(--clr-light);
 }
 
+/* ================ about ============== */
+
 .about__img {
     box-shadow: var(--bs);
     padding: .75em;
 }
 
 .image-holder {
-    padding-left: .75em;
+    padding: 1.3em 0 0 .85em;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 880px) {
     .about-flexbox {
         display: flex;
         -webkit-box-pack: justify;
@@ -228,21 +290,21 @@ a.nav__link {
         min-width: 250px;
         align-items: center;
     }
+}
 
-    .section__subtitle--container--skills {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(140px, 200px));
-    }
+.section__subtitle--container--skills {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(120px, 200px));
+}
 
-    .section__subtitle--container--skills li::before {
-        content: "▹";
-        position: relative;
-        left: 0;
-        color: var(--clr-accent);
-        font-size: 17px;
-        line-height: 12px;
-        padding: 0 10px 0 0;
-    }
+.section__subtitle--container--skills li::before {
+    content: "▹";
+    position: relative;
+    left: 0;
+    color: var(--clr-accent);
+    font-size: 17px;
+    line-height: 12px;
+    padding: 0 10px 0 0;
 }
 
 /*
