--- a/css/style.css
+++ b/css/style.css
@@ -227,12 +227,40 @@ a.nav__link {
     /*  Display hamburger button   */
    .nav-toggle {
        display: inline-block;
+       z-index: 1000;
    }
     /*  Hide nav links   */
-    .nav {
-        display: none;
+    .nav ol {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        top: 70px;
+        padding: 0 50px;
+        width: 100%;
+        height: 40vh;
     }
-
+    .nav__resume {
+        position: relative;
+        display: inline-block;
+        margin-top: 15rem;
+    }
+    .nav {
+        display: flex;
+        position: fixed;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: var(--clr-dark-bg);
+        padding: 50px;
+        width: 50%;
+        top: 90px;
+        height: 100%;
+        right: 0px;
+        transform: translateX(100%);
+        transition: transform 0.5s;
+    }
 }
 @media screen and (min-width:843px) {
     /* Display navigation links */
@@ -240,6 +268,23 @@ a.nav__link {
         display: none;
     }
 }
+
+.nav-open .nav{
+    transform: translateX(0);
+}
+
+.nav-open .hamburger {
+    transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before {
+    transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+    opacity: 0;
+}
+
 
 .nav__resume,
 .email,
@@ -431,30 +476,34 @@ a.nav__link {
 
 
 /* =============== Styling =============== */
-@media(max-width: 100em) {
-   .side_styleContainer .email_linkWrapper{
-       right: 25px;
-   }
+@media(min-width: 843px) {
+
+    .side_styleContainer .email_linkWrapper {
+        display: flex;
+        position: fixed;
+        bottom: 0;
+        left: auto;
+        right: 40px;
+        writing-mode: vertical-rl;
+        z-index: 10;
+    }
+
+    .side_styleContainer .email_linkWrapper::after {
+        content: "";
+        display: block;
+        width: 1px;
+        height: 12em;
+        background-color: var(--clr-accent);
+        margin: 0 auto;
+    }
+}
+@media(max-width: 843px) {
+    .side_styleContainer {
+        display: none;
+    }
 }
 
-.side_styleContainer .email_linkWrapper {
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    left: auto;
-    right: 40px;
-    writing-mode: vertical-rl;
-    z-index: 10;
-}
 
-.side_styleContainer .email_linkWrapper::after {
-    content: "";
-    display: block;
-    width: 1px;
-    height: 12em;
-    background-color: var(--clr-accent);
-    margin: 0 auto;
-}
 
 
 
