--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@
 }
 
 /* General styles */
+html {
+    scroll-behavior: smooth;    
+}
+
 body {
     background: var(--clr-bg);
     color: var(--clr-text);
