--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,16 @@ body {
     padding: 0 120px;
 }
 
-section {
-    padding: 11em 4.125em;
+@media screen and (min-width: 834px) {
+    section {
+        padding: 11em 4.125em;
+    }
+}
+
+@media screen and (max-width: 834px) {
+    section {
+        padding: 7em 0em;
+    }
 }
 
 p {
@@ -110,11 +118,6 @@ a {
     color: var(--clr-accent);
     text-decoration: none;
     font-family: Monaco, monospace
-}
-
-/* ***********************************============================================================*************************!!!!!!!!!!!!!!!!!*/
-a :hover {
-    opacity: .7;
 }
 
 .section__title {
@@ -258,7 +261,7 @@ a.nav__link {
         flex-direction: column;
         background-color: var(--clr-dark-bg);
         padding: 50px;
-        width: 50%;
+        width: 37%;
         top: 90px;
         height: 100%;
         right: 0px;
@@ -285,6 +288,7 @@ a.nav__link {
     transform: rotate(90deg) translateX(-6px);
 }
 
+/* One of the line in the hamburger is made invisible*/
 .nav-open .hamburger::after {
     opacity: 0;
 }
@@ -326,7 +330,7 @@ a.nav__link {
     padding: 1.3em 0 0 .85em;
 }
 
-@media (min-width: 880px) {
+@media (min-width: 980px) {
     .about-flexbox {
         display: flex;
         -webkit-box-pack: justify;
@@ -360,12 +364,24 @@ a.nav__link {
 * ============ Job Tab List ================
 */
 
+@media screen and (min-width: 843px) {
+    section .my-experiences {
+        padding-left: 7em;
+    }
+    section .section__title--experiences {
+        justify-self: center;
+    }
+    .tabs {
+        justify-content: center;
+    }
+}
+
 .tabs {
     display: block;
     position:relative;
-    width:800px;
+    max-width:700px;
     height:430px;
-    padding:30px 30px;
+    padding:30px 0px;
     overflow:hidden;
 }
 .tabs .tab-header {
@@ -415,7 +431,7 @@ a.nav__link {
     width:4px;
     height:50px;
     background:var(--clr-accent);
-    left:257.3px;
+    left:227px;
     top:80px;
     transition:all 500ms ease-in-out;
 }
@@ -456,6 +472,7 @@ a.nav__link {
     margin: 0;
 }
 
+a :hover,
 .social-list__link:hover,
 .email:hover,
 .nav__link:hover,
