--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-/* Custom Properties, update these for your own design */
 :root {
     --ff-primary: 'Source Sans Pro', sans-serif;
     --ff-secondary: 'Source Code Pro', monospace;
@@ -16,6 +15,7 @@
     --clr-dark-bg: #00233F;
     --clr-darkest-bg: #15425E;
     --clr-heading: #CCD6F6;
+    --clr-text: #BBC5E3;
     --clr-light: #8892B0;
     --clr-accent: #D2B491;
 
@@ -33,7 +33,7 @@
     :root {
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
-        --fs-h3: 1.5rem;
+        --fs-h3: 2.7rem;
         --fs-h4: 1.35rem;
         --fs-h5: 1.25rem;
         --fs-body: 1.05rem;
@@ -41,6 +41,8 @@
 }
 
 h1 { font-family: Monaco, monospace; font-size: var(--fs-h1); }
+h3 {font-size: 1.75rem}
+h4 {font-size: 1.25rem}
 
 @media only screen and (min-width: 1024px), (max-width: 1024px) {
     .main-container {
@@ -58,6 +60,11 @@ h1 { font-family: Monaco, monospace; font-size: var(--fs-h1); }
     }
 }
 
+@media screen and (max-width: 983px) {
+    .main-container {
+        padding: 0 70px;
+    }
+}
 
 @media screen and (max-width: 900px) {
     .main-container {
@@ -67,26 +74,26 @@ h1 { font-family: Monaco, monospace; font-size: var(--fs-h1); }
         padding: 12em 3.125em;
     }
     section {
-        padding: 8em 0em;
+        padding: 10em 0;
     }
 }
 
 @media screen and (max-width: 700px) {
     .intro {
-        padding: 7em 0em;
+        padding: 7em 0;
     }
     .intro h2,
     .intro h3 {
         font-size: 35px;
     }
     section {
-        padding: 6em 0em;
+        padding: 6em 0;
     }
 }
 
 @media screen and (max-width: 500px) {
     .intro {
-        padding: 8em 0em;
+        padding: 8em 0;
     }
 }
 
@@ -95,15 +102,16 @@ h1 { font-family: Monaco, monospace; font-size: var(--fs-h1); }
         padding: 0 32px;
     }
     .intro {
-        padding: 7em 0em;
+        padding: 7em 0;
     }
     .intro h1 {
         font-size: 16px;
         padding-bottom: 5px;
     }
     section {
-        padding: 6em 0em;
+        padding: 6em 0;
     }
+
     /*    make the button small*/
     .nav__resume,
     .email,
@@ -132,7 +140,7 @@ html {
 
 body {
     background: var(--clr-bg);
-    color: var(--clr-light);
+    color: var(--clr-text);
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     -webkit-font-smoothing: antialiased;
@@ -156,7 +164,7 @@ ol {
 
 /* overrode the method in the imported stylesheet */
 ul {
-    padding-inline-start: 0px;
+    padding-inline-start: 0;
 }
 
 img {
@@ -175,13 +183,17 @@ h3 {
     margin: 0;
 }
 
+h4,
+h5 {
+    margin-block-end: 1em;
+}
+
 a {
     font-size: var(--fs-body);
     font-family: Monaco, monospace;
     font-weight: bold;
     color: var(--clr-accent);
     text-decoration: none;
-    font-family: Monaco, monospace
 }
 
 .section__title {
@@ -328,7 +340,7 @@ a.nav__link {
         width: 41%;
         top: 90px;
         height: 100%;
-        right: 0px;
+        right: 0;
         transform: translateX(100%);
         transition: transform 0.5s;
     }
@@ -423,101 +435,137 @@ a.nav__link {
 }
 
 .section__subtitle--container--skills li::before {
-    content: "▹";
+    content: "✫";
     position: relative;
     left: 0;
     color: var(--clr-accent);
-    font-size: 17px;
-    line-height: 12px;
-    padding: 0 10px 0 0;
+    font-size: 10px;
+    line-height: 15px;
+    padding: 12px 12px;
 }
 
 /*
 * ============ Job Tab List ================
 */
 
-@media screen and (min-width: 843px) {
-    section .my-experiences {
-        padding-left: 7em;
+@media screen and (min-width: 700px) {
+    .tabs .tab-header {
+        float:left;
+        width:230px;
+        height:100%;
+        border-right:1px solid var(--clr-darkest-bg);
+        padding:50px 0;
     }
-    section .section__title--experiences {
-        justify-self: center;
+    .tabs .tab-header > div {
+        height:50px;
+        line-height:50px;
+        font-size:var(--fs-body);
+        color:var(--clr-heading);
+        cursor:pointer;
+        padding-left:10px;
     }
-    .tabs {
-        padding: 30px 30px;
+    .tabs .tab-indicator {
+        position:absolute;
+        width:2px;
+        height:50px;
+        background:var(--clr-accent);
+        left:229px;
+        top:80px;
+        transition:all 500ms ease-in-out;
     }
+    .tabs .tab-content > div {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        text-align:left;
+        padding: 30px 0 0 20px;
+        transform: scale(0.9);
+        top:-200%;
+    }
+}
+
+.my-experiences {
+    position: relative;
+    margin: 0 auto;
+    max-width: 900px;
 }
 
 .tabs {
     display: block;
     position:relative;
     max-width:700px;
-    height:430px;
-    padding:30px 0px;
+    height:55vh;
+    padding:30px 0;
     overflow:hidden;
 }
-.tabs .tab-header {
-    float:left;
-    width:230px;
-    height:100%;
-    border-right:1px solid var(--clr-darkest-bg);
-    padding:50px 0;
-}
-.tabs .tab-header > div {
-    height:50px;
-    line-height:50px;
-    font-size:var(--fs-body);
-    font-weight:600;
-    color:var(--clr-light);
-    cursor:pointer;
-    padding-left:10px;
-}
+
 .tabs .tab-header > div:hover,
 .tabs .tab-header > div.active {
     color:var(--clr-accent);
 }
-.tabs .tab-header div i {
-    display:block;
-    margin-left:10px;
-    margin-right:5px;
-}
+
 .tabs .tab-content {
     position:relative;
     height:100%;
     overflow:hidden;
 }
-.tabs .tab-content > div {
-    position:absolute;
-    text-align:left;
-    padding:30px 20px;
-    transform: scale(0.9);
-    top:-200%;
-}
+
 .tabs .tab-content > div.active {
     top:0;
     transform: scale(1);
-    margin-top: 0;
 }
-.tabs .tab-indicator {
-    position:absolute;
-    width:4px;
-    height:50px;
-    background:var(--clr-accent);
-    left:227px;
-    top:80px;
-    transition:all 500ms ease-in-out;
+.section__subtitle--container li {
+    list-style-position: outside;
 }
 
 .section__subtitle--container li::before {
-    content: "▹";
+    content: "✫";
     position: relative;
     left: 0;
     color: var(--clr-accent);
-    font-size: 17px;
-    line-height: 12px;
-    padding: 0 10px 0 0;
+    font-size: 10px;
+    line-height: 15px;
+    padding: 10px 10px;
 }
 
+@media screen and (max-width: 700px) {
+    .tabs {
+        max-height: 200vh;
+    }
+    .tabs .tab-header {
+        display: flex;
+        min-width:120px;
+        top: auto;
+        border-bottom:1px solid var(--clr-darkest-bg);
+        padding-bottom: 15px;
+    }
+    .tabs .tab-header > div {
+        overflow-x: scroll;
+        height:50px;
+        line-height:50px;
+        font-size:var(--fs-body);
+        color:var(--clr-heading);
+        cursor:pointer;
+        padding:10px 15px;
+    }
+    .tabs .tab-indicator {
+        top: auto;
+        height:2px;
+        max-width: 70px;
+        bottom: 0;
+        background:var(--clr-accent);
+        transition:all 500ms ease-in-out;
+    }
+    .tabs .tab-content > div {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        text-align:left;
+        padding-top: 10px;
+        transform: scale(0.9);
+        top:-200%;
+    }
+}
 /* ============== contact section ============== */
 
 .my-contact {
