--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,12 @@ a :hover,
         border-bottom:1px solid var(--clr-darkest-bg);
         flex-direction: row;
         overflow-x: scroll;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .tabs .tab-header ::-webkit-scrollbar {
+        display: none;
     }
     .tabs .tab-header div {
         font-size:var(--fs-body);
@@ -448,10 +454,9 @@ a :hover,
         padding: 0 10px 5px;
     }
     .tabs .tab-indicator {
-        left: auto;
-        height:2px;
-        max-width: 70px;
-        bottom: 0;
+        position: absolute;
+        width: calc(100% / 3);
+        height:1px;
         background:var(--clr-accent);
         transition:all 500ms ease-in-out;
     }
@@ -484,10 +489,10 @@ a :hover,
     .tabs .tab-indicator {
         position:absolute;
         width:2px;
-        height:50px;
+        height:40px;
         background:var(--clr-accent);
         left:229px;
-        top:80px;
+        top:60px;
         transition:all 500ms ease-in-out;
     }
     .tabs .tab-content > div {
