--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,18 @@ a.nav__link {
     line-height: 15px;
     padding: 10px 10px;
 }
+.job-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1em; /* Adjust spacing as needed */
+}
+.job-header .job-image {
+    max-width: 70px; /* Adjust size as needed */
+    height: auto;
+    margin-left: 20px; /* Space between title and image */
+    margin-right: 20px;
+}
 
 /* ========================= PROJECTS ========================= */
 
